schema/testdata/errors/permission_attribute_invalid_roles.keel
model Person {
    actions {
        get getPerson(id)
    }

    @permission(
        //expect-error:17:29:AttributeExpressionError:unknown identifier 'NotValidRole'
        roles: [NotValidRole],
        actions: [get]
    )

    @permission(
        //expect-error:16:20:AttributeExpressionError:expression expected to resolve to type Role[] but it is Number
        roles: 1234,
        actions: [get]
    )

    @permission(
        //expect-error:16:22:AttributeExpressionError:expression expected to resolve to type Role[] but it is Text
        roles: "1234",
        actions: [get]
    )

    @permission(
        //expect-error:16:34:AttributeExpressionError:expression expected to resolve to type Role[] but it is Text[]
        roles: ["thisisnotvalid"],
        actions: [get]
    )
}

role Admin {
    domains {
        "myorg.com"
    }
}
